--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ body {
 .header__logo {
     padding: 10px 20px;
     width: 48px;
+
+    animation: infinite 2000ms rotation linear;
 }
 
 /* NAV */
@@ -115,12 +117,37 @@ body {
     cursor: pointer;
 }
 
-.button__submit:hover{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
+.button__submit:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
 }
 
 .underline {
     width: 90%;
     height: 2px;
     background-color: #4a4a4a;
+}
+
+/* ANIMS */
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes bounce {
+    0% {
+        transform: translate(0px);
+    }
+    25% {
+        transform: translate(-20px);
+    }
+    75% {
+        transform: translate(20px);
+    }
+    100% {
+        transform: translate(0px);
+    }
 }
