--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     display: none;
     position: absolute;
     background-color: black;
-    min-width: 160px;
+    min-width: 180px;
     z-index: 1;
 }
 
@@ -100,11 +100,13 @@ body {
     text-decoration: none;
     cursor: pointer;
 
-    transition: color 0.2s linear;
+    transition: color, font-size 0.2s linear;
 }
 
 .links:hover {
     color: #cdcd02;
+    font-size: 17px;
+
 }
 
 .button__submit {
