--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
     text-decoration: none;
     cursor: pointer;
 
-    transition: color, font-size 0.2s linear;
+    transition: color, font-size .2s linear;
 }
 
 .links:hover {
